--- a/scss/partials/_chart_headers.scss
+++ b/scss/partials/_chart_headers.scss
@@ -55,6 +55,7 @@ div.actual-container{
   h3.actual-label {
     font-size: 12px;
     font-weight: 700;
+    font-family: $oc_headers_font;
     margin-top: 0px;
 
     &.gray {
