--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -29,6 +29,7 @@ div.footer {
         background-color: white;
         text-decoration: none;
         font-weight: 700;
+        font-family: $oc_headers_font;
         font-size: 12px;
         line-height: 1.5;
         letter-spacing: 1px;
@@ -74,6 +75,7 @@ div.footer {
       a.footer-link {
         opacity: 0.5;
         font-weight: 700;
+        font-family: $oc_headers_font;
         font-size: 12px;
         line-height: 1.5;
         letter-spacing: 1px;
