--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -145,6 +145,7 @@ div.fullscreen-topic {
           background-color: transparent;
           opacity: 0.5;
           font-weight: 700;
+          font-family: $oc_headers_font;
           font-size: 12px;
           line-height: 1.5;
           letter-spacing: 1px;
