--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -45,6 +45,7 @@ div.topic {
     div.topic-title {
       opacity: 0.2;
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       line-height: 1.5;
       letter-spacing: 1px;
