--- a/scss/partials/_add_topic_popover.scss
+++ b/scss/partials/_add_topic_popover.scss
@@ -81,6 +81,7 @@ div.add-topic-popover {
     div.add-topic-popover-subheader {
       opacity: 0.2;
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       line-height: 1.5;
       letter-spacing: 1px;
