--- a/scss/partials/_company_avatar.scss
+++ b/scss/partials/_company_avatar.scss
@@ -29,6 +29,7 @@ div.company-avatar {
 
     span.company-name {
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 24px;
       line-height: 1.2;
       color: $oc_gray_5;
