--- a/scss/partials/_d3_column_chart.scss
+++ b/scss/partials/_d3_column_chart.scss
@@ -8,9 +8,9 @@ div.d3-column-container{
     }
 
     text.chart-label{
-      font-family: $oc_main_font;
       font-size: 24px;
       font-weight: 700;
+      font-family: $oc_headers_font;
       color: $oc_gray_5;
       opacity: 0.75;
     }
@@ -18,6 +18,7 @@ div.d3-column-container{
     text.sub-chart-label {
       opacity: 0.75;
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       letter-spacing: 1px;
       color: $oc_gray_5;
@@ -28,10 +29,10 @@ div.d3-column-container{
     }
 
     text.chart-x-label {
-      font-family: $oc_main_font;
       font-size: 14px;
       line-height: 1.1;
-      font-weight: bold;
+      font-weight: 700;
+      font-family: $oc_headers_font;
     }
   }
 
