--- a/scss/partials/_growth_metric_edit.scss
+++ b/scss/partials/_growth_metric_edit.scss
@@ -9,6 +9,7 @@ div.growth-metric-edit{
     }
     label.metric-label{
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       line-height: 1.5;
       letter-spacing: 1px;
@@ -55,6 +56,7 @@ div.growth-metric-edit{
     button {
       height: 30px;
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       line-height: 1.5;
       letter-spacing: 1px;
