--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -45,10 +45,11 @@ nav.oc-navbar {
             border: none;
           }
 
-          label{
+          label {
             padding-top: 7px;
             padding-left: 10px;
             font-weight: 700;
+            font-family: $oc_headers_font;
             font-size: 12px;
             line-height: 1.5;
             letter-spacing: 1px;
@@ -95,6 +96,7 @@ nav.oc-navbar {
             padding-top: 7px;
             padding-left: 20px;
             font-weight: 700;
+            font-family: $oc_headers_font;
             font-size: 12px;
             line-height: 1.5;
             letter-spacing: 1px;
@@ -115,6 +117,7 @@ nav.oc-navbar {
       div.preview-title {
         width: 150px;
         font-weight: 700;
+        font-family: $oc_headers_font;
         font-size: 12px;
         line-height: 1.5;
         letter-spacing: 1px;
