--- a/scss/partials/_su_preview_dialog.scss
+++ b/scss/partials/_su_preview_dialog.scss
@@ -117,6 +117,7 @@ div.su-preview-dialog {
           height: 40px;
           background-color: $oc_yellow;
           font-weight: 700;
+          font-family: $oc_headers_font;
           font-size: 12px;
           line-height: 1.5;
           letter-spacing: 1px;
@@ -138,6 +139,7 @@ div.su-preview-dialog {
         display: block;
         opacity: 0.5;
         font-weight: 700;
+        font-family: $oc_headers_font;
         font-size: 12px;
         line-height: 1.5;
         letter-spacing: 1px;
@@ -182,6 +184,7 @@ div.su-preview-dialog {
       width: 106px;
       height: 30px;
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       line-height: 1.5;
       letter-spacing: 1px;
@@ -205,6 +208,7 @@ div.su-preview-dialog {
       width: 106px;
       height: 30px;
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       line-height: 1.5;
       letter-spacing: 1px;
