--- a/scss/partials/_tooltip.scss
+++ b/scss/partials/_tooltip.scss
@@ -34,6 +34,7 @@ div.tooltip-container {
 
     div.tooltip-cta {
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       line-height: 1.3;
       letter-spacing: 1px;
