fix drawer menu items font

--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -35,6 +35,7 @@ ul#menu {
       padding: 15px 23px;
       opacity: 0.75;
       font-weight: 700;
+      font-family: $oc_headers_font;
       font-size: 12px;
       line-height: 1.5;
       letter-spacing: 1px;
