use OpenSans for cell of growth and finances

--- a/scss/partials/_cell.scss
+++ b/scss/partials/_cell.scss
@@ -12,6 +12,7 @@
       text-align: right;
       font-size: 12px;
       font-weight: 400;
+      font-family: $oc_headers_font;
       letter-spacing: 1px;
       padding: 0;
       margin: 0;
@@ -26,6 +27,7 @@
       color: rgba(0, 0, 0, 0.4);
       font-size: 12px;
       font-weight: 400;
+      font-family: $oc_headers_font;
     }
   }
 
@@ -36,6 +38,7 @@
       color: black;
       font-size: 12px;
       font-weight: 400;
+      font-family: $oc_headers_font;
     }
   }
 
@@ -47,6 +50,7 @@
       color: black;
       font-size: 12px;
       font-weight: 400;
+      font-family: $oc_headers_font;
     }
   }
 
@@ -60,6 +64,7 @@
       text-align: left;
       font-size: 12px;
       font-weight: 400;
+      font-family: $oc_headers_font;
     }
   }
 
