keep data cells from line breaking

--- a/scss/partials/_fullscreen_topic_edit.scss
+++ b/scss/partials/_fullscreen_topic_edit.scss
@@ -166,6 +166,7 @@ div.fullscreen-topic-edit {
           letter-spacing: 1px;
           color: rgba(78,90,107, 0.5);
           text-transform: uppercase;
+          white-space: nowrap;
         }
 
         td div.comp-cell {
