--- a/scss/partials/_atomic.scss
+++ b/scss/partials/_atomic.scss
@@ -69,6 +69,7 @@
 .open-sans {font-family: 'Open Sans', Arial, sans-serif; }
 
 .small-caps {
+  font-family: 'Open Sans', Arial, sans-serif;
   text-transform: uppercase;
   font-size: 12px;
   letter-spacing: 1px;
