--- a/scss/partials/_su_snapshot_preview.scss
+++ b/scss/partials/_su_snapshot_preview.scss
@@ -26,7 +26,7 @@ div.su-snapshot-preview {
     div.back-to-dashboard-row {
       float: left;
       width: 240px;
-      margin-top: 0px;
+      margin-top: 13px;
       padding-top: 0px;
 
       button {
@@ -133,42 +133,47 @@ div.su-snapshot-preview {
     }
   }
 
-  div.topic-row {
-    padding-bottom: 33px !important;
-    padding-right: 50px;
-    padding-left: 50px;
+  div.topics-column {
+    max-width: 600px !important;
+  
 
-    &:hover {
-      div.share-remove-container {
-        display: block;
+    div.topic-row {
+      padding-bottom: 33px !important;
+      padding-right: 50px;
+      padding-left: 50px;
+
+      &:hover {
+        div.share-remove-container {
+          display: block;
+        }
       }
-    }
 
-    &.ui-sortable-helper {
-      background-color: transparent;
+      &.ui-sortable-helper {
+        background-color: transparent;
 
-      div.share-remove-container {
-        display: none;
+        div.share-remove-container {
+          display: none;
+        }
+
+        div.topic {
+          border: 4px solid $oc_yellow;
+          transition: transform .25s ease-in-out;
+          -webkit-transition: -webkit-transform .25s ease-in-out;
+          -ms-transform: rotate(7deg); /* IE 9 */
+          -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
+          transform: rotate(7deg);
+        }
       }
 
       div.topic {
-        border: 4px solid $oc_yellow;
-        transition: transform .25s ease-in-out;
-        -webkit-transition: -webkit-transform .25s ease-in-out;
-        -ms-transform: rotate(7deg); /* IE 9 */
-        -webkit-transform: rotate(7deg); /* Chrome, Safari, Opera */
-        transform: rotate(7deg);
-      }
-    }
+        background-color: white;
+        border-radius: 2px;
+        border: 0px solid transparent;
+        box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
 
-    div.topic {
-      background-color: white;
-      border-radius: 2px;
-      border: 0px solid transparent;
-      box-shadow: 1px 2px 2px 0 rgba(0, 0, 0, 0.2), inset 0 1px 3px 0 #ffffff;
-
-      div.pillbox-container{
-        text-align: left;
+        div.pillbox-container{
+          text-align: left;
+        }
       }
     }
   }
