fix sortable placeholder size

--- a/scss/partials/_su_snapshot_preview.scss
+++ b/scss/partials/_su_snapshot_preview.scss
@@ -228,4 +228,7 @@ div.su-snapshot-preview {
 
 div.sortable-placeholder {
   background-color: rgba(78, 90, 107, 0.2);
+  margin-bottom: 33px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
