--- a/scss/partials/_atomic.scss
+++ b/scss/partials/_atomic.scss
@@ -7,16 +7,24 @@
 
 .btn-outline {
   padding: .3rem 2rem;
-  border: solid 1px rgba(78, 90, 107, 0.5);
-  opacity: 0.5;
   font-weight: 700;
   font-size: 0.75rem;
   letter-spacing: .1em;
   color: $oc_gray_5;
   text-transform: uppercase;
   transition: 230ms;
+  background-color: transparent;
+  border: 1px solid rgba(78, 90, 107, 0.5);
+  opacity: 0.2;
+
   &:hover {
+    border: 1px solid rgba(78, 90, 107, 0.5);
     opacity: .8;
+  }
+
+  &:active {
+    background-color: rgba(78, 90, 107, 0.1);
+    border: 1px solid rgba(78, 90, 107, 0.5);
   }
 }
 
@@ -28,6 +36,18 @@
   color: $oc_gray_5;
   text-transform: uppercase;
   padding: .5rem 2rem;
+  border: 1px solid $oc_yellow;
+
+  &:hover {
+    background-color: $oc_yellow;
+    border: 1px solid #d8b935;
+  }
+
+  &:active {
+    background-color: $oc_yellow;
+    border: solid 2px #d8b935;
+    color: #fff;
+  }
 }
 
 .bg-gray { background-color: $oc-gray_1 }
