follow style guide for add topic interaction

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -33,13 +33,28 @@ div.topic {
     height: 94.5px;
     border-radius: 2px;
     background-color: rgba(244, 244, 244 , 0.2);
-    border: solid 1px rgba(78, 90, 107, 0.2);
+    border: 1px solid rgba(78, 90, 107, 0.2);
     text-align: center;
     position: relative;
     box-shadow: none;
+    font-weight: 700;
+    font-family: $oc_headers_font;
+
+    div.topic-title {
+      color: rgba(78, 90, 107, 0.2);
+    }
+
+    &:hover {
+      background-color: #ffffff;
+      color: rgba(78, 90, 107, 0.2);
+    }
 
     &.active {
       background-color: #ffffff;
+      border: 1px solid rgba(78, 90, 107, 0.8);
+      div.topic-title {
+        color: $oc_gray_5;
+      }
     }
 
     div.topic-title {
