new topic-edit component for FoCE

--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -65,3 +65,4 @@
 @import "partials/_small_loading";
 @import "partials/_home";
 @import "partials/_list_companies";
+@import "partials/_topic_edit";
