fix title field width

--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -106,6 +106,7 @@ div.topic {
           border: none;
           outline: none;
           cursor: text;
+          width: 100%;
         }
 
         div.topic-headline-inner {
