--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -20,172 +20,216 @@ div.topic {
       left: 0;
     }
 
-    & > div {
-      height: auto;
+    div.topic-foce{
+      position: relative;
 
-      div.topic-foce{
+      & > div, & > input{
+        padding: 0px 20px;
+      }
+
+      div.topic-header {
+
+        .topic-image {
+          width: 30px;
+          height: 30px;
+          float: left;
+        }
+
+        svg path, svg polygon {
+          fill: #8b8a8a;
+        }
+      }
+
+      div.card-header{
+        margin: 0px;
+        padding: 0px;
+        width: 100%;
         position: relative;
+        padding-top: 10px;
 
-        & > div, & > input{
-          padding: 0px 20px;
+        &.card-image {
+          max-height: 196px;
+          overflow: hidden;
+          padding-top: 0px;
         }
 
-        div.topic-header {
-
-          .topic-image {
-            width: 30px;
-            height: 30px;
-            float: left;
-          }
-
-          svg path, svg polygon {
-            fill: #8b8a8a;
-          }
-        }
-
-        div.card-header{
-          margin: 0px;
-          padding: 0px;
-          width: 100%;
-          position: relative;
-          padding-top: 10px;
-
-          &.card-image {
-            max-height: 196px;
-            overflow: hidden;
-            padding-top: 0px;
-          }
-
-          button.remove-header {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            opacity: 0;
-          }
-
-          &:hover {
-            button.remove-header {
-              opacity: 0.8;
-            }
-          }
-
-          img {
-            width:100%;
-          }
-
-          div.section-container {
-            margin: 10px;
-          }
-
-          div.gradient {
-            position:absolute;
-            z-index:2;
-            right:0; bottom:0; left:0px;
-            width: 100%;
-            height: 20px; /* adjust it to your needs */
-            background: url(data:image/svg+xml;base64,alotofcodehere);
-            background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
-            background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(70%,rgba(255,255,255,1)));
-            background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
-            background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
-            background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
-            background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
-            pointer-events: none;
-          }
-        }
-
-        input.topic-title {
-          padding-top: 10px;
-          opacity: 0.5;
-          font-weight: 700;
-          font-size: 12px;
-          line-height: 1.5;
-          letter-spacing: 1px;
-          color: $oc_gray_5;
-          text-transform: uppercase;
-          border: none;
-          outline: none;
-          cursor: text;
-          width: 100%;
-        }
-
-        div.topic-headline-inner {
-          padding-top: 15px;
-          font-family: $oc_headers_font;
-          font-size: 20px;
-          line-height: 1.2;
-          color: $oc_gray_5;
-          outline: none;
-          border: none;
-          cursor: text;
-
-          &:active {
-            outline: none;
-          }
-
-          svg.emojione {
-            width: 20px;
-            height: 20px;
-          }
-        }
-
-        div.hidden-topic-body {
-          display: none;
-          padding: 0px;
-          margin: 0px;
+        button.remove-header {
+          position: absolute;
+          top: 10px;
+          right: 10px;
           opacity: 0;
         }
 
-        div.topic-body {
-          margin-top: 10px;
-          margin-bottom: 10px;
-          color: $oc_gray_5;
-          overflow: hidden;
+        &:hover {
+          button.remove-header {
+            opacity: 0.8;
+          }
+        }
+
+        img {
+          width:100%;
+        }
+
+        div.section-container {
+          margin: 10px;
+        }
+
+        div.gradient {
+          position:absolute;
+          z-index:2;
+          right:0; bottom:0; left:0px;
+          width: 100%;
+          height: 20px; /* adjust it to your needs */
+          background: url(data:image/svg+xml;base64,alotofcodehere);
+          background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
+          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(70%,rgba(255,255,255,1)));
+          background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+          background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+          background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+          background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);
+          pointer-events: none;
+        }
+      }
+
+      input.topic-title {
+        padding-top: 10px;
+        opacity: 0.5;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 1px;
+        color: $oc_gray_5;
+        text-transform: uppercase;
+        border: none;
+        outline: none;
+        cursor: text;
+        width: 100%;
+      }
+
+      &:hover {
+        button.topic-pencil-button {
+          opacity: 0.8;
+        }
+      }
+
+      button.topic-pencil-button{
+        position: absolute;
+        top: 5px;
+        right: 10px;
+        opacity: 0;
+        transition: 230ms;
+      }
+
+      div.topic-headline-inner {
+        padding-top: 15px;
+        font-family: $oc_headers_font;
+        font-size: 20px;
+        line-height: 1.2;
+        color: $oc_gray_5;
+        outline: none;
+        border: none;
+        cursor: text;
+
+        &:active {
+          outline: none;
+        }
+
+        svg.emojione {
+          width: 20px;
+          height: 20px;
+        }
+      }
+
+      div.hidden-topic-body {
+        display: none;
+        padding: 0px;
+        margin: 0px;
+        opacity: 0;
+      }
+
+      div.topic-body {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        color: $oc_gray_5;
+        overflow: hidden;
+        font-family: $oc_headers_font;
+        font-size: 12px;
+        line-height: 1.3;
+        cursor: text;
+        min-height: 20px;
+
+        svg.emojione {
+          width: 12px;
+          height: 12px;
+        }
+
+        *{
           font-family: $oc_headers_font;
           font-size: 12px;
           line-height: 1.3;
-          cursor: text;
-          min-height: 20px;
+        }
 
-          svg.emojione {
-            width: 12px;
-            height: 12px;
-          }
+        a {
+          text-decoration: none;
+          pointer-events: none;
+          box-shadow: inset 0 -1px 0 $oc_gray_5;
+          font-weight: normal;
+        }
 
-          *{
+        img{
+          display: none;
+        }
+
+        p:last-child {
+          margin-bottom: 0px;
+          padding-bottom: 0px;
+        }
+      }
+
+      div.topic-foce-footer {
+        width: 100%;
+
+        div.topic-foce-footer-left {
+          float: left;
+          width: 15%;
+
+          label.char-counter {
+            opacity: 0.5;
+            font-weight: 700;
             font-family: $oc_headers_font;
             font-size: 12px;
-            line-height: 1.3;
-          }
+            line-height: 1.5;
+            letter-spacing: 1px;
+            color: rgba(78, 90, 107, 0.5);
 
-          a {
-            text-decoration: none;
-            pointer-events: none;
-            box-shadow: inset 0 -1px 0 $oc_gray_5;
-            font-weight: normal;
-          }
-
-          img{
-            display: none;
-          }
-
-          p:last-child {
-            margin-bottom: 0px;
-            padding-bottom: 0px;
+            &.char-count-alert {
+              color: rgba(215, 42, 70, 0.5);
+            }
           }
         }
 
-        div.topic-foce-buttons, div.topic-foce-footer {
+        div.topic-foce-footer-right {
           float: right;
+          width: 85%;
 
           button {
             margin-left: 7px;
+            float: right;
           }
         }
+      }
 
-        div.topic-foce-footer {
-          margin-bottom: 20px;
+      div.topic-foce-buttons {
+
+        button {
+          margin-left: 7px;
+          float: right;
         }
+      }
+
+      div.topic-foce-footer {
+        margin-top: 10px;
+        margin-bottom: 20px;
       }
     }
   }
