max height atomic classes

--- a/scss/partials/_atomic.scss
+++ b/scss/partials/_atomic.scss
@@ -136,3 +136,10 @@
 .p25 {padding: 1.5rem}
 .px25 {padding-left: 1.5rem; padding-right: 1.5rem}
 .py25 {padding-top: 1.5rem; padding-bottom: 1.5rem}
+
+// min/max-heights
+
+.mh1 {max-height: 1rem}
+.mh2 {max-height: 3rem}
+.mh3 {max-height: 6rem}
+.mh4 {max-height: 12rem}
