--- a/scss/partials/_atomic.scss
+++ b/scss/partials/_atomic.scss
@@ -137,7 +137,7 @@
 .px25 {padding-left: 1.5rem; padding-right: 1.5rem}
 .py25 {padding-top: 1.5rem; padding-bottom: 1.5rem}
 
-// min/max-heights
+// max-heights
 
 .mh1 {max-height: 1rem}
 .mh2 {max-height: 3rem}
