--- a/scss/public/css/app.main.scss
+++ b/scss/public/css/app.main.scss
@@ -65,3 +65,4 @@
 @import "partials/_list_companies";
 @import "partials/_login_required";
 @import "partials/_login";
+@import "partials/_add_topic";
