replace trash icon and warning icon with file drawer icon from fontawesome

--- a/scss/partials/_fullscreen_topic.scss
+++ b/scss/partials/_fullscreen_topic.scss
@@ -33,6 +33,9 @@ div.fullscreen-topic {
     z-index: 1040;
     left: 30px;
     bottom: 30px;
+    i.fa-archive {
+      margin-right: 5px;
+    }
   }
 
   button.close-editing {
