--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -236,6 +236,8 @@ div.topic {
           margin-left: 7px;
           float: right;
           margin-bottom: 5px;
+          color: $oc_gray_5;
+          font-size: 18px;
         }
       }
 
