--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -58,6 +58,15 @@ div.topic {
           top: 10px;
           right: 10px;
           opacity: 0;
+          width: 30px;
+          height: 30px;
+          border-radius: 15px;
+          background-color: $oc_gray_5;
+
+          div.svg-icon {
+            margin-top: -8px;
+            margin-left: 1px;
+          }
         }
 
         &:hover {
@@ -221,29 +230,44 @@ div.topic {
 
       div.topic-foce-buttons {
         span.file-upload-progress {
-          float: right;
           margin-top: 7px;
           padding-bottom: 0px;
           margin-bottom: 0px;
-          // opacity: 0.5;
           font-size: 12px;
           line-height: 1.5;
           letter-spacing: 1px;
           color: rgba(78, 90, 107, 0.5);
+          display: block;
+          width: 38px;
         }
 
         button {
-          margin-left: 7px;
-          float: right;
           margin-bottom: 5px;
           color: $oc_gray_5;
           font-size: 18px;
+        }
+
+        button.left {
+          margin-right: 7px;
+        }
+
+        button.right{
+          margin-left: 7px;
         }
       }
 
       div.topic-foce-footer {
         margin-top: 10px;
         margin-bottom: 20px;
+
+        div.divider {
+          width: calc(100% + 40px);
+          margin-left: -20px;
+          height: 2px;
+          opacity: 0.1;
+          border: solid 1px rgba(78, 90, 107, 0.5);
+          margin-bottom: 20px;
+        }
       }
     }
   }
