--- a/scss/mixins/_reusable.scss
+++ b/scss/mixins/_reusable.scss
@@ -122,7 +122,9 @@
     padding: 0;
     font-size: 18px;
     line-height: 1.8;
-    color: $oc_gray_5;
+    color: $text_color;
+    font-family: $oc_main_font;
+    font-weight: 400;
 
     a {
       cursor: pointer;
