--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -173,6 +173,7 @@ div.topic {
       div.topic-body {
         margin-top: 10px;
         margin-bottom: 20px;
+        font-weight: 400;
         color: $oc_gray_5;
         overflow: hidden;
         cursor: pointer;
@@ -186,6 +187,7 @@ div.topic {
 
         *{
           font-size: 12px;
+          font-weight: 400;
           line-height: 1.3;
           cursor: pointer;
         }
