--- a/scss/partials/_fullscreen_topic_edit.scss
+++ b/scss/partials/_fullscreen_topic_edit.scss
@@ -1,15 +1,3 @@
-.char-counter {
-  label {
-    opacity: 0.5;
-    font-weight: 700;
-    font-family: $oc_headers_font;
-    font-size: 12px;
-    line-height: 1.5;
-    letter-spacing: 1px;
-    color: rgba(78, 90, 107, 0.5);
-  }
-}
-
 div.fullscreen-topic-edit {
   position: relative;
   min-height: calc(100vh - #{$navbar_height}px - 60px - 4px);
@@ -28,10 +16,12 @@ div.fullscreen-topic-edit {
 
       div.topc-edit-top-box-footer {
         width: 100%;
-        margin-bottom: 20px;
+        margin-top: 25px;
+        height: 20px;
 
         div.char-count {
-          width: 30px;
+          width: 50px;
+          height: 20px;
           float: left;
           opacity: 0.5;
           font-family: $oc_headers_font;
@@ -40,11 +30,37 @@ div.fullscreen-topic-edit {
           line-height: 1.5;
           letter-spacing: 1px;
           color: rgba(78, 90, 107, 0.5);
+          padding-top: 5px;
+
+          &.red {
+            color: $oc_red_regular;
+          }
+        }
+
+        div.type-picker{
+          font-size: 12px;
+          padding-top: 6px;
+
+          a {
+            color: black;
+            text-decoration: underline;
+          }
         }
 
         button.add-image {
           float: left;
-          margin-left: 20px;
+        }
+
+        span.file-upload-progress {
+          margin-top: 7px;
+          padding-bottom: 0px;
+          margin-bottom: 0px;
+          font-size: 12px;
+          line-height: 1.5;
+          letter-spacing: 1px;
+          color: rgba(78, 90, 107, 0.5);
+          display: block;
+          width: 38px;
         }
       }
 
@@ -56,19 +72,27 @@ div.fullscreen-topic-edit {
           max-width: 490px;
         }
 
-        button.remove-header-image{
+        button.remove-header{
           position: absolute;
           top: 10px;
           right: 10px;
-        }
-      }
+          opacity: 0;
+          width: 30px;
+          height: 30px;
+          border-radius: 15px;
+          background-color: $oc_gray_5;
 
-      .char-counter {
-        font-weight: 800;
-        font-size: 12px;
-        line-height: 1.5;
-        letter-spacing: 1px;
-        color: rgba(78, 90, 107, 0.2);
+          div.svg-icon {
+            margin-top: -8px;
+            margin-left: 2px;
+          }
+        }
+
+        &:hover {
+          button.remove-header {
+            opacity: 0.8;
+          }
+        }
       }
 
       input.topic-edit-title {
@@ -326,8 +350,19 @@ div.fullscreen-topic-edit {
     div.topic-body-line{
       padding: 0px 30px;
 
+      div.add-more-below {
+        margin-top: 34px;
+        opacity: 0.5;
+        font-family: $oc_headers_font;
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 1.5;
+        letter-spacing: 1px;
+        color: $oc_gray_5;
+      }
+
       div.topic-body{
-        margin-top: 21px !important;
+        margin-top: 17px !important;
         @include rich-editor-body(rgba(78, 90, 107, 0.5));
         line-height: 1.8;
         font-size: 18px;
@@ -337,8 +372,9 @@ div.fullscreen-topic-edit {
 
   button.remove-button {
     float: left;
-    margin-left: 20px;
-    margin-bottom: 20px;
+    position: fixed;
+    left: 20px;
+    bottom: 20px;
     i.fa-archive {
       margin-right: 5px;
     }
@@ -346,16 +382,20 @@ div.fullscreen-topic-edit {
 
   button.save-button {
     cursor: pointer;
-    float: right;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
   }
 
   button.close-editing {
     cursor: pointer;
     height: 32px;
-    float: right;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+
+    &.has-save {
+      right: 150px;
+    }
   }
 }
