explicitly set overflow auto to sortable elements container to avoid disappear of the sortable helper

--- a/scss/partials/_su_snapshot_preview.scss
+++ b/scss/partials/_su_snapshot_preview.scss
@@ -134,7 +134,7 @@ div.su-snapshot-preview {
 
   div.topics-column {
     max-width: 600px !important;
-  
+    overflow: auto;
 
     div.topic-row {
       padding-bottom: 33px !important;
