icons are gray 5 w/ 0.5 oapcity

--- a/scss/partials/_topic_edit.scss
+++ b/scss/partials/_topic_edit.scss
@@ -253,7 +253,7 @@ div.topic {
 
         button {
           margin-bottom: 5px;
-          color: $oc_gray_5;
+          color: rgba(78, 90, 107, 0.5);
           font-size: 18px;
         }
 
