add image icon color fix

--- a/scss/partials/_fullscreen_topic_edit.scss
+++ b/scss/partials/_fullscreen_topic_edit.scss
@@ -49,6 +49,7 @@ div.fullscreen-topic-edit {
 
         button.add-image {
           float: left;
+          color: rgba(78, 90, 107, 0.5);
         }
 
         span.file-upload-progress {
